--- a/index.html
+++ b/index.html
@@ -1,7 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My ePortfolio</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 20px; text-align: center; }
+        .container { max-width: 800px; margin: auto; }
+        h1, h2 { color: #333; }
+        .artifact { margin: 20px 0; padding: 15px; border: 1px solid #ddd; border-radius: 5px; }
+        video { width: 100%; max-width: 600px; }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <div class="container">
+        <h1>My ePortfolio</h1>
+        <p><strong>[Deonya Williams</strong> - Aspiring Network administrator</p>
+
+        <h2>Professional Self-Assessment</h2>
+        <p>Welcome to my ePortfolio. This showcases my growth in software design, algorithms, and databases...</p>
+
+        <h2>Code Review Video</h2>
+        <video controls>
+            <source src="assets/code-review.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+
+        <h2>Artifacts</h2>
+
+        <div class="artifact">
+            <h3>Artifact 1: Mobile App to Web Conversion</h3>
+            <p>Enhancing UI, porting to HTML/CSS/JavaScript.</p>
+            <a href="https://github.com/Deonya/project1" target="_blank">View on GitHub</a>
+        </div>
+
+        <div class="artifact">
+            <h3>Artifact 2: Merge Sort Implementation</h3>
+            <p>Implemented efficient sorting for frequency data.</p>
+            <a href="https://github.com/Deonya/project2" target="_blank">View on GitHub</a>
+        </div>
+
+        <div class="artifact">
+            <h3>Artifact 3: Firebase Integration</h3>
+            <p>Replaced static files with Firebase for real-time updates.</p>
+            <a href="https://github.com/Deonya/project3" target="_blank">View on GitHub</a>
+        </div>
+
+        <h2>Contact</h2>
+        <p>GitHub: <a href="https://github.com/Deonya" target="_blank">Deonya</a></p>
+        <p>Email: deonyawilliams7@gmail.com</p>
+    </div>
+
 </body>
 </html>
