--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h2>Code Review Video</h2>
         <video controls>
-            <source src="assets/code-review.mp4" type="video/mp4">
+            <source src="downloads/Code Review.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
@@ -42,7 +42,7 @@
         </div>
 
         <div class="artifact">
-            <h3>Artifact 3: Firebase Integration</h3>
+            <h3>Artifact 3: JSON Server</h3>
             <p>Replaced static files with Firebase for real-time updates.</p>
             <a href="https://github.com/Deonya/project3" target="_blank">View on GitHub</a>
         </div>
