--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <p>You can explore the final project and see the full implementation by clicking the link below:</p>
 
-<a class="button" href="YOUR_PROJECT_LINK" target="_blank">View Final Project</a>
+<a class="button" href="https://github.com/Deonya/Capstone-project-Enhancements/blob/main/Capstone%20Inventory%20app.zip" target="_blank">View Final Project</a>
 
     <div class="footer">
         <p>Capstone Project by Deonya Williams.</p>
